generate client, add example notebook
