# src/lightningrod/_generated/api/dataset_linter/list_rules_dataset_linter_rules_get.py
@@ -1,42 +1,29 @@
 from http import HTTPStatus
 from typing import Any
-from urllib.parse import quote
 
 import httpx
 
 from ... import errors
 from ...client import AuthenticatedClient, Client
-from ...models.file_set import FileSet
-from ...models.http_validation_error import HTTPValidationError
+from ...models.list_rules_response import ListRulesResponse
 from ...types import Response
 
 
-def _get_kwargs(
-    file_set_id: str,
-) -> dict[str, Any]:
+def _get_kwargs() -> dict[str, Any]:
 
     _kwargs: dict[str, Any] = {
         "method": "get",
-        "url": "/filesets/{file_set_id}".format(
-            file_set_id=quote(str(file_set_id), safe=""),
-        ),
+        "url": "/dataset-linter/rules",
     }
 
     return _kwargs
 
 
-def _parse_response(
-    *, client: AuthenticatedClient | Client, response: httpx.Response
-) -> FileSet | HTTPValidationError | None:
+def _parse_response(*, client: AuthenticatedClient | Client, response: httpx.Response) -> ListRulesResponse | None:
     if response.status_code == 200:
-        response_200 = FileSet.from_dict(response.json())
+        response_200 = ListRulesResponse.from_dict(response.json())
 
         return response_200
-
-    if response.status_code == 422:
-        response_422 = HTTPValidationError.from_dict(response.json())
-
-        return response_422
 
     if client.raise_on_unexpected_status:
         raise errors.UnexpectedStatus(response.status_code, response.content)
@@ -44,9 +31,7 @@ def _parse_response(
         return None
 
 
-def _build_response(
-    *, client: AuthenticatedClient | Client, response: httpx.Response
-) -> Response[FileSet | HTTPValidationError]:
+def _build_response(*, client: AuthenticatedClient | Client, response: httpx.Response) -> Response[ListRulesResponse]:
     return Response(
         status_code=HTTPStatus(response.status_code),
         content=response.content,
@@ -56,28 +41,22 @@ def _build_response(
 
 
 def sync_detailed(
-    file_set_id: str,
     *,
     client: AuthenticatedClient,
-) -> Response[FileSet | HTTPValidationError]:
-    """Get File Set
+) -> Response[ListRulesResponse]:
+    """List Rules
 
-     Get a specific FileSet by ID.
-
-    Args:
-        file_set_id (str):
+     List available linter rules
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Response[FileSet | HTTPValidationError]
+        Response[ListRulesResponse]
     """
 
-    kwargs = _get_kwargs(
-        file_set_id=file_set_id,
-    )
+    kwargs = _get_kwargs()
 
     response = client.get_httpx_client().request(
         **kwargs,
@@ -87,54 +66,43 @@ def sync_detailed(
 
 
 def sync(
-    file_set_id: str,
     *,
     client: AuthenticatedClient,
-) -> FileSet | HTTPValidationError | None:
-    """Get File Set
+) -> ListRulesResponse | None:
+    """List Rules
 
-     Get a specific FileSet by ID.
-
-    Args:
-        file_set_id (str):
+     List available linter rules
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        FileSet | HTTPValidationError
+        ListRulesResponse
     """
 
     return sync_detailed(
-        file_set_id=file_set_id,
         client=client,
     ).parsed
 
 
 async def asyncio_detailed(
-    file_set_id: str,
     *,
     client: AuthenticatedClient,
-) -> Response[FileSet | HTTPValidationError]:
-    """Get File Set
+) -> Response[ListRulesResponse]:
+    """List Rules
 
-     Get a specific FileSet by ID.
-
-    Args:
-        file_set_id (str):
+     List available linter rules
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Response[FileSet | HTTPValidationError]
+        Response[ListRulesResponse]
     """
 
-    kwargs = _get_kwargs(
-        file_set_id=file_set_id,
-    )
+    kwargs = _get_kwargs()
 
     response = await client.get_async_httpx_client().request(**kwargs)
 
@@ -142,28 +110,23 @@ async def asyncio_detailed(
 
 
 async def asyncio(
-    file_set_id: str,
     *,
     client: AuthenticatedClient,
-) -> FileSet | HTTPValidationError | None:
-    """Get File Set
+) -> ListRulesResponse | None:
+    """List Rules
 
-     Get a specific FileSet by ID.
-
-    Args:
-        file_set_id (str):
+     List available linter rules
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        FileSet | HTTPValidationError
+        ListRulesResponse
     """
 
     return (
         await asyncio_detailed(
-            file_set_id=file_set_id,
             client=client,
         )
     ).parsed
